--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
+    <p class="first-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, eos!</p>
+    <p class="second-p">Lorem ipsum dolor sit amet.</p>
+    <button id="set-color">Ustaw tło paragrafów</button>
 
-
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
